fixed image loading, removed media rule in header so page color change button doesn't break and fixed bug with height in covers images

--- a/src/css/components/01-header.css
+++ b/src/css/components/01-header.css
@@ -149,7 +149,6 @@ select {
   border-color: var(--color-secondary);
 }
 
-@media (min-width: 320px) {
   .header-select {
     position: absolute;
     top: 695px;
@@ -166,7 +165,7 @@ select {
     cursor: pointer;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-}
+
 
 @media (min-width: 768px) {
   .header-select {
